# brokerage-service-api

./: .env.annotations1  .env.annotations2  .env.example  .env.local  .env.worms  .gitignore  .gitmodules  README.md  index.yaml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: docker-push-tag.yml  docker-push.yml  docker-test.yml  helm-publish.yml  helm_lint.yml  lint_tests.yml
charts/: .env.example  README.md  helmfile.yaml.gotmpl
charts/api/: values.yaml
charts/api/templates/: _helpers.tpl  deployment.yaml
charts/env/dev/: values.yaml
charts/env/live/: values.yaml
deployment/: README.md
deployment/api/: Chart.yaml  values.yaml
deployment/api/templates/: ingress.yaml  service.yaml
deployment/charts/api/: values.yaml
deployment/helmfile/: .env.example  helmfile.yaml.gotmpl
deployment/helmfile/utils/: cluster-issuer.yaml  ghcr-pull-secret.yaml
deployment/templates/: deployment.yaml
docker/: Dockerfile  docker-compose copy.yml  docker-compose.yml
docs/: API_EXAMPLES.md
examples/: ingest_data.py  initial_aphia_ids.txt  sample_bodc.json  sample_jncc.json  sample_jncc_annotations.xlsx
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml
sources/: source.yaml
src/brokerage_service_api/: __init__.py
src/brokerage_service_api/api/: app.py  exceptions.py
src/brokerage_service_api/crud/: __init__.py  (+1 more)
tests/: conftest.py  test_annotations_client.py  test_health.py  test_search_compiler.py  test_search_compiler_pagination.py  test_search_model.py  test_search_route.py  test_source_health_endpoint.py  test_source_registry.py  test_upstream_schemas.py
tests/data/: sample_bodc.json  sample_bodc_annotations.xlsx  sample_jncc.json  sample_jncc_annotations.xlsx
tests/integration/: test_annotations_live.py
tests/routes/: test_health.py  test_search.py  test_search_annotations.py  test_source_health_endpoint.py
tests/utils/: load_seed_data.py
(+30 files in other folders)
