[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "brokerage_service_api"
version = "0.1.0"
description = "Brokerage Service API"
authors = ["Tobias Ferreira <tobias.ferreira@noc.ac.uk>"]
license = "LICENSE"
readme = "README.md"
keywords = [
  "fastapi", "brokerage service"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
Repository = "https://github.com/paidiver/brokerage-service-api"
Issues = "https://github.com/paidiver/brokerage-service-api/issues"

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "~3.13"
fastapi = "^0.137.2"
uvicorn = "^0.49.0"
python-dotenv = "^1.2.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.4.2"

[tool.poetry.group.dev.dependencies]
sqlalchemy = "^2.0.46"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
tox = "^4.0.0"
faker = "^40.0.0"
factory-boy = "^3.2.0"
httpx = "^0.28.1"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
twine = "^6.1.0"
importlib-metadata = "7.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["config/__init__.py"]

[tool.ruff]
line-length = 88
target-version = "py313"
extend-exclude = [
  ".venv",
  "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["api", "config"]
